src/test/resources/parser/valid/function/immediateInvoke.sbsc
(a: int) -> {
    println(str(a));
}(3);

return true;