src/test/resources/parser/invalid/function/invalidDelegatedReturn.sbsc
test = (a: int): num -> {
    return if(true) 4.6 else "hello";
};